Fix nav alignment issues, continue building data page.

--- a/css/gumby.css
+++ b/css/gumby.css
@@ -2590,7 +2590,7 @@ table.rounded thead th, table.rounded thead td, table.rounded caption + tbody tr
 /*============================================
 nav
 ============================================*/
-.fixNav { position: fixed; top: 0; left: 0; width: 100%; background: white; z-index: 10000; height: 230px; padding-top: 50px; overflow: hidden; -webkit-transition: height 0.3s; -moz-transition: height 0.3s; transition: height 0.3s; }
+.fixNav { position: fixed; top: 0; left: 0; width: 100%; background: white; border-bottom: 2px solid black; z-index: 10000; height: 230px; padding-top: 50px; overflow: hidden; -webkit-transition: height 0.3s; -moz-transition: height 0.3s; transition: height 0.3s; }
 
 .fixNavWrapper { width: 90%; max-width: 69em; margin: 0 auto; padding: 0 1.875em; }
 
@@ -2600,12 +2600,12 @@ nav
 .shrink { height: 70px; padding-top: 11px; }
 .shrink p { display: none; }
 .shrink img { width: 60%; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; }
-.shrink .nav { top: -35px; }
+.shrink .nav { top: -41px; }
 
 .logo { position: relative; }
 .logo p { font-size: 18px; font-weight: 700; line-height: 1.2em; padding-top: .7em; }
 
-.nav { position: relative; top: -15px; }
+.nav { position: relative; top: -19px; }
 .nav ul { margin-bottom: 0; }
 .nav ul li { font-size: 1.4em; font-weight: 700; text-align: center; }
 .nav ul li a { color: black; }
@@ -2688,7 +2688,21 @@ main
 data and information
 ============================================*/
 .section { overflow: hidden; }
-.section.top { padding: 20px 20px 80px 20px; background-image: url(../img/oil_blur.jpg); height: 550px; margin-top: 230px; color: white; }
+.section.top { padding: 20px 20px 80px 20px; background-image: url(../img/oil_blur.jpg); margin-top: 230px; color: white; }
+.section.top.dataInfo { height: 400px; position: relative; z-index: -1; }
 .section.top.dataInfo h1 { font-size: 2.16em; line-height: 1em; font-weight: 700; background-color: #6ab5c3; padding-left: 20px; margin-top: 70px; color: white; }
 .section .title.dataInfo { padding-top: 30px; padding-bottom: 20px; }
 .section .title.dataInfo h1 { color: black; }
+
+.dataSubHead { vertical-align: middle; text-align: center; background-color: #6ab5c3; }
+.dataSubHead .circle { z-index: 50; margin-top: 0px; margin-bottom: 60px; height: 250px; width: 250px; background-color: #6ab5c3; border: 2px solid black; border-radius: 50%; }
+.dataSubHead .circle img { width: 80px; }
+.dataSubHead .circle:hover, .dataSubHead .circle:focus { height: 250px; width: 250px; border-radius: 50%; border: 2px solid black; background-color: #8ec7d2; }
+.dataSubHead .circle a { display: block; }
+.dataSubHead h2 { padding-top: 20%; font-size: 26px; color: white; font-weight: 700; padding-right: 15px; padding-left: 15px; }
+.dataSubHead .graph h2 { padding-top: 30%; }
+.dataSubHead .active { height: 250px; width: 250px; border-radius: 50%; border: 2px solid black; background-color: #8ec7d2; }
+
+.move { margin-top: -130px; }
+
+.mapBlock { margin-top: 30px; margin-bottom: 60px; }
